objects/ssot__ProviderVisitProductDetailing__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrandId__c</fullName>
        <label>Brand</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Product Detailing Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsGeneratedFromPresentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated From Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOffLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Off Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__NextPrvdVisitProductObjectiveText__c</fullName>
        <label>Next Provider Visit Product Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductHierarchyName__c</fullName>
        <label>Product Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductIndicationId__c</fullName>
        <label>Product Indication</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductObject__c</fullName>
        <label>Product Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductTherapeuticAreaId__c</fullName>
        <label>Product Therapeutic Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisitId__c</fullName>
        <label>Provider Visit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561266031_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitProductDetailing_BrandI_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>ProviderVisitProductDetailing_BrandI_rel</relationshipLabel>
        <relationshipName>rel_1745561266031_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561365716_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitProductDetailing_Produc_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProviderVisitProductDetailing_Produc_rel</relationshipLabel>
        <relationshipName>rel_1745561365716_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561368519_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisitProductDetailing_Produc_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>ProviderVisitProductDetailing_Produc_rel</relationshipLabel>
        <relationshipName>rel_1745561368519_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>